--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,14 @@
-era5_path: "C:/Users/gindi002/DATASET/Era5_GRIB_NEW_dataset_2023-2019_and_more_future"
-merged_data_path: "C:/Users/gindi002/DATASET/merged_dataset.csv"
-pv_database_path: "C:/Users/gindi002/DATASET/pv_database.csv"
-results_path: "C:/Users/gindi002/PROJECT_RESULTS/"
-smarts_inp_path: "C:/Users/gindi002/DATASET/smarts_inp_files/"
-smarts_out_path: "C:/Users/gindi002/DATASET/smarts_out_files/"
-shapefile_path: "C:/Users/gindi002/DATASET/koppen_shapefile.shp"
-DATA_FOLDER: "C:/Users/gindi002/DATASET"
-MODEL_PATH: "C:/Users/gindi002/PROJECT_RESULTS/models"
-DB_PATH: "C:/Users/gindi002/DATASET/database.sqlite"
-OUTPUT_DIR: "C:/Users/gindi002/PROJECT_RESULTS/outputs"
+era5_path: data/Era5_GRIB_NEW_dataset_2023-2019_and_more_future
+merged_data_path: data/merged_dataset.csv
+pv_database_path: data/pv_database.csv
+results_path: results
+smarts_inp_path: data/smarts_inp_files
+smarts_out_path: data/smarts_out_files
+shapefile_path: data/koppen_shapefile.shp
+DATA_FOLDER: data
+MODEL_PATH: models
+DB_PATH: data/database.sqlite
+OUTPUT_DIR: outputs
 train_features: "path/to/X_train.npy"
 test_features: "path/to/X_test.npy"
 train_target_pv: "path/to/y_train_pv.npy"
