--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,13 @@
-numpy>=1.20.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-xarray>=0.19.0
-scikit-learn>=1.2,<1.4
-scikit-learn-extra==0.3.0
-cartopy
-geopandas
-pykrige
-tqdm
-cfgrib>=0.9.9
-plotly
-streamlit
-netCDF4
-pvlib
-
-sqlalchemy
-scipy>=1.7.0
-contextily
-shapely
+numpy
+pandas
+psutil
+xarray
 pyyaml
-joblib
-psutil>=5.8.0
-xgboost
-packaging>=21.0
-importlib-metadata>=4.0.0
-pytest
+scikit-learn
+pykrige
+pvlib
+geopandas
+matplotlib
+seaborn
+contextily
+dask
