--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,7 @@ results_path: results
 smarts_inp_path: data/smarts_inp_files
 smarts_out_path: data/smarts_out_files
 shapefile_path: data/koppen_shapefile.shp
+pv_profile_path: pv_technology_profiles_enhanced.csv
 DATA_FOLDER: data
 MODEL_PATH: models
 DB_PATH: data/database.sqlite
